# MediaCloudSync

./: .env.example  .gitignore  .replit  README.md  app.py  apt.txt  cloudinary_uploader.py  cookies.txt  keepAlive.js  package-lock.json  package.json  render-build.sh  replit.md  server.js  task_manager.py  youtube_processor.py
controllers/: channel.controller.js  playlist.controller.js  upload.controller.js  video.controller.js
nodejs/: .env  package.json  server.js
nodejs/controllers/: upload.controller.js
nodejs/public/css/: index.css
nodejs/store/: video.store.js
public/css/: index.css
python/: cloudinary_uploader.py  cookies.txt  pyproject.toml  render.yaml  youtube_processor.py
python/static/js/: app.js
python/templates/: index.html
static/js/: app.js
store/: channel.store.js  video.store.js
views/: index.ejs
